# sp1-demo

./: .gitignore  Cargo.toml  DEMO.md  ECDH.md  INFO.md  NEXT.md  PLAN.md  PROD.md  README.md  TODO.md
common/: Cargo.toml
common/src/: lib.rs
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml  build.rs
host/src/: crypto.rs  lib.rs  stream.rs
notary/: Cargo.toml
notary/circuits/: sha-256-compress.txt
notary/doc/: PROTOCOL_ECDH.md
notary/src/: aes.rs  circuits.rs  ecdh.rs  garble.rs  ghash.rs  handshake.rs  hkdf.rs  lib.rs  tls.rs  transcript.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: capture.rs  keygen.rs  keylog.rs  main.rs  witness.rs
shared/: Cargo.toml
shared/src/: lib.rs
