[workspace]

[package]
name = "notary"
version = "0.1.0"
edition = "2024"

[lib]
name = "notary"
path = "src/lib.rs"

[[bin]]
name = "gen_sha256_compress"
path = "src/bin/gen_sha256_compress.rs"

[[bin]]
name = "notary_proxy"
path = "src/bin/notary_proxy.rs"

[[bin]]
name = "notary_demo"
path = "src/bin/notary_demo.rs"

[[bin]]
name = "ecdh_2pc_sanity"
path = "src/bin/ecdh_2pc_sanity.rs"

[dependencies]
sp1-demo-common         = { path = "../common" }
fancy-garbling          = { git = "https://github.com/GaloisInc/swanky", package = "fancy-garbling" }
swanky-twopac           = { git = "https://github.com/GaloisInc/swanky", package = "swanky-twopac" }
swanky-channel          = { git = "https://github.com/GaloisInc/swanky", package = "swanky-channel" }
swanky-rng              = { git = "https://github.com/GaloisInc/swanky", package = "swanky-rng" }
swanky-error            = { git = "https://github.com/GaloisInc/swanky", package = "swanky-error" }
swanky-ot-chou-orlandi  = { git = "https://github.com/GaloisInc/swanky", package = "swanky-ot-chou-orlandi" }
aes-gcm = "0.10"
sha2    = { version = "0.10", features = ["compress"] }
hmac    = "0.12"

# Notary binary deps (TLS proxy + IPC)
rustls       = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = { version = "4", features = ["group", "zeroize"] }
rand         = "0.8"
serde        = { version = "1", features = ["derive"] }
bincode      = "1.3"
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
url          = "2"
zeroize      = "1"

[dev-dependencies]
aes = "0.8"
