[package]
name = "sp1-https-json-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "6.0.0", features = ["blocking"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
