[package]
name = "sp1-https-json-script"
version = "0.1.0"
edition = "2021"

[build-dependencies]
dirs-next = "2"

[dependencies]
sp1-sdk = { version = "6.0.0", features = ["blocking"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rustls = { version = "0.23", features = ["ring"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
sp1-https-json-shared = { path = "../shared" }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
url = "2"
webpki-roots = "0.26"
